--- a/Project.toml
+++ b/Project.toml
@@ -5,5 +5,6 @@ version = "0.1.0"
 
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+BetterFileWatching = "c9fd44ac-77b5-486c-9482-9798bd063cc6"
 Comonicon = "863f3e99-da2a-4334-8734-de3dacbe5542"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
