doc: Sliden shows how to must mulitple scripts to form a single deck

--- a/examples/slidev/package.json
+++ b/examples/slidev/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "slidev build",
     "dev": "slidev --open",
+    "lit": "julia --project=. -m Runlit -i src -o .",
     "export": "slidev export"
   },
   "dependencies": {
